# bare-type-stripper

./: .clang-format  CMakeLists.txt  README.md  binding.c  index.d.ts  index.js  package.json  test.js
lib/: strip.h
